# dx_rt

./: CMakeLists.txt  CMakePresets.json  README.md  RELEASE_NOTES.md  build.bat  build.ps1  build.sh  build_debian_package_vnpu.sh  install.sh  test_dma_recovery.sh  uninstall.sh
agent_md_files/: acceleration.md  bitmatch.md  coding_standard.md  general.md  profiler.md  profiler_visualizer.md  template.md  unit_test.md  unit_test_local.md  validation_test.md  yocto.md
cli/: dxrt-cli.cpp  run_model.cpp
cli/dxbenchmark/: CMakeLists.txt  dxbenchmark.cpp
cli/dxbenchmark/core/src/: utils.cpp
cli/dxtop/: CMakeLists.txt  dxtop.cpp
cli/dxtop/core/: npu_core.cpp  npu_core.h  npu_device.cpp  npu_device.h  npu_monitor.cpp  npu_monitor.h  version.h
cli/dxtop/core/data_source/: data_source_interface.h  noservice_data_source.cpp  noservice_data_source.h  service_data_source.cpp  service_data_source.h
cli/dxtop/core/util/: npu_device_formatter.cpp
cli/dxtop/core/view/: linux_renderer.cpp
cmake/: dxrt.cfg.cmake  dxrt.function.cmake  toolchain.aarch64.cmake
csharp_package/: DxEngine.sln  DxEngine_NuGet_Guide.md  DxRT_CSharp.sln  README.md  build.bat  build.sh  nuget.config
csharp_package/DxEngine/: DataTypes.cs  DxEngine.csproj  InferenceEngine.cs  InferenceOption.cs  NativeBridge.cs  RuntimeEventDispatcher.cs  Version.cs
csharp_package/cli/: DxEngine.Cli.csproj  ParseModel.cs  Program.cs  RunModel.cs
csharp_package/examples/: BasicExample.cs  DxEngine.Examples.csproj
csharp_package/examples/SimpleInference/: Program.cs  SimpleInference.csproj
csharp_package/examples/YoloV5/: Program.cs  YoloV5Example.csproj
csharp_package/native/: DxEngineNative.vcxproj  build.bat
csharp_package/src/DxEngine/: Configuration.cs  DeviceStatus.cs  (+7 more)
debian_m1/: Readme.md  changelog  control  postinst  postrm  prerm  rules
debian_vnpu/: README.md  changelog  control  copyright  postinst  postrm  rules
docs/: mkdocs.yml
examples/cpp/: CMakeLists.txt
examples/cpp/check_versions/: check_versions.cpp
examples/cpp/display_async_pipe/: display_async_pipe.cpp
examples/cpp/display_async_precreated_engines/: CMakeLists.txt  display_async_precreated_engines.cpp
examples/cpp/display_async_thread/: display_async_thread.cpp
examples/cpp/display_async_thread_local_engines/: CMakeLists.txt  display_async_thread_local_engines.cpp
examples/cpp/display_async_wait/: display_async_wait.cpp
examples/cpp/include/: concurrent_queue.h  logger.h  safe_reinterpret_cast.h  simple_circular_buffer_pool.h
examples/cpp/multi_input_model_inference/: multi_input_model_inference.cpp
examples/cpp/run_async_input_release/: CMakeLists.txt  run_async_input_release.cpp
examples/cpp/run_async_model/: run_async_model.cpp
examples/cpp/run_async_model_bound/: run_async_model_bound.cpp
examples/cpp/run_async_model_bufcount/: run_async_model_bufcount.cpp
examples/cpp/run_async_model_conf/: run_async_model_conf.cpp
examples/cpp/run_async_model_output/: run_async_model_output.cpp
examples/cpp/run_async_model_profiler/: run_async_model_profiler.cpp
examples/cpp/run_async_model_thread/: run_async_model_thread.cpp
examples/cpp/run_async_model_wait/: run_async_model_wait.cpp
examples/cpp/run_batch_model/: run_batch_model.cpp
examples/cpp/run_sync_model/: run_sync_model.cpp
examples/cpp/run_sync_model_bound/: run_sync_model_bound.cpp
examples/cpp/run_sync_model_bufcount/: run_sync_model_bufcount.cpp
examples/cpp/run_sync_model_memory/: run_sync_model_memory.cpp
examples/cpp/run_sync_model_output/: run_sync_model_output.cpp
examples/python/: multi_input_model_inference.py  run_async_model.py  run_async_model_bufcount.py  run_async_model_callback.py  run_async_model_conf.py  run_async_model_profiler.py  run_async_model_thread.py  run_async_model_wait.py  run_batch_model.py  run_sync_model.py  run_sync_model_bound.py  run_sync_model_bufcount.py  run_sync_model_memory.py
lib/: CMakeLists.txt  buffer.cpp  circular_buffer.cpp  cli.cpp  cli_support_function.cpp  configuration.cpp  cpu_handle.cpp  cpu_handle_worker.cpp  device_info_status.cpp  device_struct_operators.cpp  device_util.cpp  device_version.cpp  driver.cpp  exception_handler.cpp  filesys_support.cpp  fixed_size_buffer.cpp  fw.cpp  inference_engine.cpp  inference_job.cpp  inference_option.cpp  inference_timer.cpp  memory.cpp  model.cpp  model_parser_factory.cpp  multiprocess_memory.cpp  npu_format_handler.cpp  npu_memory_cache.cpp  objects_pool.cpp  ort_delay_load.cpp  parse_model.cpp  ppu_binary_parser.cpp  profiler.cpp  request.cpp  runtime_event_dispatcher.cpp  task.cpp  task_data.cpp  tensor.cpp  testdata.cpp  usage_timer.cpp  util.cpp  (+2 more)
lib/cfg/: common.cfg
lib/data/: ppcpu.cpp  ppcpu.h  ppcpu_data.inl
lib/device_pool/: acc_device_task_layer.cpp  device_compativility_layer.cpp  device_core.cpp  device_pool.cpp  device_task_layer.cpp  nfh_layer.cpp  request_response_class.cpp  service_abstract_layer.cpp  service_layer_factory.cpp  service_util.cpp  std_device_task_layer.cpp
lib/device_shm/: monitor_shared_memory.h  shared_memory_reader.cpp  shared_memory_reader.h  shared_memory_writer.cpp  shared_memory_writer.h
lib/driver_adapter/: linux_driver_adapter.cpp  network_driver_adapter.cpp  windows_driver_adapter.cpp
lib/dxrt_service/: dxrt_service.cpp  dxrt_service_err.cpp  memory_service.cpp  memory_service.hpp  process_with_device_info.cpp  process_with_device_info.h  schedule_service.cpp  scheduler_service.h  service_device.cpp  service_device.h  service_error.h
lib/exception/: exception.cpp
lib/parsers/: model_parser.cpp  parser_common_util.cpp  v6_model_parser.cpp  v7_model_parser.cpp  v8_model_parser.cpp
lib/resource/: log_messages.cpp  log_messages.h
python_package/: build_wheels.bat  pyproject.toml
python_package/cli/: parse_model.py  run_model.py  run_model_prof.py
python_package/src/dx_engine/: __init__.py  configuration.py  device_status.py  inference_engine.py  inference_option.py  version.py
python_package/src/dx_engine/capi/: CMakeLists.txt  py_inference_engine.cpp
tool/profiler/: plot.py
(+95 files in other folders)
