[tool.pydocstyle]
ignore = "D100,D104,D213,D413,D406,D407,D203,D107,D415,D400"

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
python_version = "^3.8"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
filter_files = true
line_length = 120

[tool.pytest.ini_options]
addopts = ["-vv", "-s"]


[build-system]
requires = ["scikit-build-core[pyproject]>=0.9.0","setuptools>=42", "wheel", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name="dx-engine"
version = "1.1.4"
description="Python wrapper class for dx_rt"
readme = "README.md"
license = {text="MIT"}
authors = [{name="DEEPX-RT", email="rt@deepx.ai"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.8"
keywords = ["deepx", "dxrt"]



dependencies = [
  "numpy"
]

[project.urls]
Homepage = "https://deepx.ai"


[tool.scikit-build]
cmake.source-dir = "src/dx_engine/capi" 
wheel.packages = ["src/dx_engine"]


# cibuildwheel configuration for building wheels across multiple Python versions
[tool.cibuildwheel]
# Build for Python 3.10, 3.11, 3.12, 3.13, 3.14
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]

# Skip 32-bit builds and musllinux
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*"]

# Test command to verify the wheel works
test-command = "python -c \"import dx_engine; print(dx_engine.__version__)\""

[tool.cibuildwheel.linux]
# Use manylinux2014 for broader compatibility
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.cibuildwheel.macos]
# Build for both x86_64 and arm64 on macOS
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
# Build for 64-bit Windows only
archs = ["AMD64"]

