add_subdirectory(display_async_wait)
add_subdirectory(display_async_pipe)
add_subdirectory(display_async_thread)
add_subdirectory(display_async_precreated_engines)
add_subdirectory(display_async_thread_local_engines)
add_subdirectory(run_async_model)
add_subdirectory(run_async_model_bound)
add_subdirectory(run_async_model_thread)
add_subdirectory(run_async_model_wait)
add_subdirectory(run_async_model_output)
add_subdirectory(run_async_model_conf)
add_subdirectory(run_async_model_profiler)
add_subdirectory(run_async_model_bufcount)
add_subdirectory(run_batch_model)
add_subdirectory(run_sync_model)
add_subdirectory(run_sync_model_bound)
add_subdirectory(run_sync_model_output)
add_subdirectory(run_sync_model_bufcount)
add_subdirectory(run_sync_model_memory)
add_subdirectory(multi_input_model_inference)
add_subdirectory(check_versions)

if(USE_VNPU)
    add_subdirectory(run_async_input_release)
endif()
